--- a/todoHTMLCSS/index.html
+++ b/todoHTMLCSS/index.html
@@ -7,9 +7,36 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
 </head>
-<body>
-    <H1>Todo HTML y CSS</H1>
+<body class="bg-secondary-subtle">
+   
+    <nav class="content-fluid text-bg-dark">
+        <H1>Todo HTML y CSS</H1>
+    </nav>
+    <main class = "container bg-body">
+        <div class="row">
+            <div class="col">
+                Column
+            </div>
+            <div class="col">
+                <h4>Preparando el entorno</h4>
+                <p>El entorno de trabajo es el que se encarga de la organización de los diferentes archivos que se van a utilizar en el proyecto, además de la gestión de las dependencias.</p>
+                <h5>Paso1: Instalación de Visual Studio Code</h5>
+                <p>Visual Studio Code es un editor de código abierto que se utiliza para escribir código en diferentes lenguajes. Es muy versátil y se puede utilizar para cualquier tipo de proyecto.</p>
+                <p>Para instalar <span>Visual Studio Code</span>, sigue estos pasos:</p>
+                <a class="btn btn-primary" href="https://code.visualstudio.com/" role = "button">Descargar Visual Studio Code</a>
+                <h5>Paso2: Plugins de Visual Studio Code</h5>
+                <p>Los plugins de Visual Studio Code son herramientas que se utilizan para mejorar el funcionamiento del editor. Algunos de los plugins más populares son:</p>
+                <a href="https://code.visualstudio.com/" class="btn btn-danger">CSS</a>
+                <h5>Paso3: Instalacion de git</h5>
+                <p>Git es un sistema de control de versiones distribuido que se utiliza para manejar el código fuente de un proyecto. Es muy importante para el desarrollo de software, ya que permite hacer versiones y compartir el código con otros desarrolladores.</p>
+                <a href = "https://git-scm.com/" class="btn btn-primary">Descargar git</a>
+            </div>
+            <div class="col">
+                Column
+            </div>
+        </div>
 
+    </main>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
