Segunda columna e imagenes relevantes

--- a/todoHTMLCSS/index.html
+++ b/todoHTMLCSS/index.html
@@ -12,12 +12,43 @@
     <nav class="content-fluid text-bg-dark">
         <H1>Todo HTML y CSS</H1>
     </nav>
-    <main class = "container bg-body">
+    <main class = "container d-flex">
         <div class="row">
+            <!-- columna aplicando card -->
             <div class="col">
-                Column
+                <div class = "card" >
+                    <img src="/todoHTMLCSS/img/Hanni1.jpg" class="card-img-top" alt="Imagen" height="300px" width="300px">
+                    <div class = "card-body">
+                        <h5 class="card-title">Hanni Pham</h5>
+                        <p class="card-text">Hanni Pham es una persona muy interesante, muy inteligente y muy buena en la programación. Es una de las personas más importantes en el mundo de la programación.</p>
+                        <a href="https://twitter.com/hannipham" class="btn btn-primary">Twitter</a>
+                    </div>
+                    <ul class="list-group list-group-flush">
+                        <li class="list-group-item text-bg-dark">Presentaciones de Hanni <a href="https://twitter.com/hannipham" class="text-primary">@hannipham</a></li>
+                        <li class="list-group-item p-0">
+                            <div class = "row ">
+                                <div class="col-auto">
+                                    <img src="/todoHTMLCSS/img/Hanni2.jpg" class="img-fluid" alt="Imagen" height="75px" width="75px">
+                                </div>
+                                <div class="col align-self-center">
+                                    <a href = "https://www.youtube.com/watch?v=90Jqld7le-k" class="text-primary">Presentacion Bubblegum</a>
+                                </div>
+                            </div>
+                        </li>
+                        <li class="list-group-item p-0">
+                            <div class = "row ">
+                                <div class="col-auto">
+                                    <img src="/todoHTMLCSS/img/Hanni3.jpg" class="img-fluid" alt="Imagen" height="75px" width="75px">
+                                </div>
+                                <div class="col align-self-center">
+                                    <a href = "https://www.youtube.com/watch?v=VWLWY2mLL2I" class="text-primary">Presentacion University</a>
+                                </div>
+                            </div>
+                        </li>  
+                    </ul>
+                </div>
             </div>
-            <div class="col">
+            <div class="col bg-body ">
                 <h4>Preparando el entorno</h4>
                 <p>El entorno de trabajo es el que se encarga de la organización de los diferentes archivos que se van a utilizar en el proyecto, además de la gestión de las dependencias.</p>
                 <h5>Paso1: Instalación de Visual Studio Code</h5>
@@ -32,7 +63,6 @@
                 <a href = "https://git-scm.com/" class="btn btn-primary">Descargar git</a>
             </div>
             <div class="col">
-                Column
             </div>
         </div>
 
