--- a/todoHTMLCSS/index.html
+++ b/todoHTMLCSS/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Todo HTML y CSS</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-
+    <link rel="stylesheet" href="css/estilos.css">
 </head>
 <body class="bg-secondary-subtle">
    
@@ -57,12 +57,53 @@
                 <a class="btn btn-primary" href="https://code.visualstudio.com/" role = "button">Descargar Visual Studio Code</a>
                 <h5>Paso2: Plugins de Visual Studio Code</h5>
                 <p>Los plugins de Visual Studio Code son herramientas que se utilizan para mejorar el funcionamiento del editor. Algunos de los plugins más populares son:</p>
-                <a href="https://code.visualstudio.com/" class="btn btn-danger">CSS</a>
+                <a class="btn btn-danger" data-bs-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">CSS</a>
+                <div class="collapse my-1" id="collapseExample">
+                    <div class="card card-body">
+                        <ul>
+                            <li><a href="https://marketplace.visualstudio.com/items?itemName=bierner.markdown-mermaid" target="_blank">Mermaid</a></li>
+                            <li><a href="https://marketplace.visualstudio.com/items?itemName=bierner.markdown-mermaid" target="_blank">Bootstrap Icons</a></li>
+                        </ul>
+                    </div>
+                </div>
                 <h5>Paso3: Instalacion de git</h5>
                 <p>Git es un sistema de control de versiones distribuido que se utiliza para manejar el código fuente de un proyecto. Es muy importante para el desarrollo de software, ya que permite hacer versiones y compartir el código con otros desarrolladores.</p>
                 <a href = "https://git-scm.com/" class="btn btn-primary">Descargar git</a>
             </div>
+            <!-- tercera columna -->
+
             <div class="col">
+                <div class="card">
+                    <ul class="list-group list-group-flush">
+                        <li class ="list-group-item">
+                            <div class="row">
+                                <div class="col-2"><img src="/todoHTMLCSS/img/Hanni4.jpg" class="img-fluid" ></div>
+                                <div class="col-10">
+                                    <div class="row fw-semibold">Mas fotos de Hanni</div>
+                                    <div class="row"><small class="p-0 muyPequeyo text-body-secondary">Hanni Pham</small></div>
+                                </div>
+                            </div>
+                        </li>
+                        <li class="list-group-item">
+                            <div class="row">
+                                <div class="col-2"><img src="/todoHTMLCSS/img/Hanni6.jpg" class="img-fluid" ></div>
+                                <div class="col-10">
+                                    <div class="row fw-semibold">Mas fotos de Hanni</div>
+                                    <div class="row"><small class="p-0 muyPequeyo text-body-secondary">Hanni Pham</small></div>
+                                </div>
+                            </div>
+                        </li>
+                        <li class="list-group-item ">
+                            <div class="row">
+                                <div class="col-2"><img src="/todoHTMLCSS/img/hanni.webp" class="img-fluid" ></div>
+                                <div class="col-10">
+                                    <div class="row fw-semibold">Mas fotos de Hanni</div>
+                                    <div class="row"><small class="p-0 muyPequeyo text-body-secondary">Hanni Pham</small></div>
+                                </div>
+                            </div>
+                        </li>
+                    </ul>
+                </div>
             </div>
         </div>
 
