--- a/todoHTMLCSS/index.html
+++ b/todoHTMLCSS/index.html
@@ -8,11 +8,39 @@
     <link rel="stylesheet" href="css/estilos.css">
 </head>
 <body class="bg-secondary-subtle">
-   
-    <nav class="content-fluid text-bg-dark">
-        <H1>Todo HTML y CSS</H1>
+    <nav class ="text-bg-dark navbar navbar-expand-lg" data-bs-theme="dark">
+        <div class = "container-fluid">
+            <a class = "navbar-brand p-0" href="#"> 
+                <img src="/todoHTMLCSS/img/Hanni1.jpg" alt="Logo" height="40px" width="30px"> <span class = "align-middle">HANNI PHAM</span>
+            </a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="#">Comenzando</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">CSS</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" aria-current="page" href="#">Modelo de cajas</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Semantico</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" aria-current="page" href="#">Diseño</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Contacto</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
     </nav>
-    <main class = "container d-flex">
+    <main class = "container mt-3">
         <div class="row">
             <!-- columna aplicando card -->
             <div class="col">
